syntax = "proto3";

package articles;

message Article {
    int64 id = 1;
    string title = 2;
    string body = 3;
}

message CreateArticleRequest {
    Article article = 1;
}

message CreateArticleResponse {
    Article article = 1;
}

message ListArticleRequest {
    int64 page = 1;
}

message ListArticleResponse {
    Article article  = 1;
}

service ServiceName {
    rpc CreateArticle (CreateArticleRequest) returns (CreateArticleResponse);
 
    rpc ListArticle (ListArticleRequest) returns  (stream ListArticleResponse);
}